--- a/components/patient-data/pageobjects/pom.xml
+++ b/components/patient-data/pageobjects/pom.xml
@@ -41,7 +41,7 @@
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-test</artifactId>
+      <artifactId>xwiki-platform-test-ui</artifactId>
       <version>${xwiki.version}</version>
     </dependency>
     <dependency>
